src/objects/SJM_Integrations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds Salesforce to SJM webservice credentials and endpoints</description>
    <fields>
        <fullName>Web_Service_Endpoint__c</fullName>
        <description>URL endpoint of webserivce</description>
        <label>Web Service Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web_Service_Name__c</fullName>
        <description>General name of the webservice.</description>
        <label>Web Service Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Web_Service_Password__c</fullName>
        <description>Webservice password</description>
        <label>Web Service Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Service_User__c</fullName>
        <description>Webservice user name</description>
        <label>Web_Service_User</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SJM Integrations</label>
</CustomObject>